2002-10-04  Darin Adler  <darin@apple.com>

        Fixed problems parsing numbers that are larger than a long with parseInt.

        * kjs/config.h: Define HAVE_FUNC_STRTOLL.
        * kjs/function.cpp: (GlobalFuncImp::call):
	Change parseInt to use strtoll if available.

=== Alexander-26 ===

2002-09-27  Darin Adler  <darin@apple.com>

	- fixed 3033969 -- repro crash (infinite recursion in JavaScript)
	clicking on "screens" option at fsv.sf.net

        * kjs/object.h: Change recursion limit to 100 levels rather than 1000.

=== Alexander-25 ===

2002-09-26  Darin Adler  <darin@apple.com>

	Fix the infinity problem Dave worked around. We didn't have the
	configuration flags set right to make infinity work. Setting those
	properly made everything work without changes to min and max.

        * kjs/config.h: Define HAVE_FUNC_ISINF, HAVE_STRING_H, and
	also WORDS_BIGENDIAN (if on ppc).

        * kjs/math_object.cpp: (MathFuncImp::call): Roll out min and max
	changes from yesterday.

2002-09-25  David Hyatt  <hyatt@apple.com>

	Fix the impls of min/max to not use +inf/-inf when you have
	arguments.  Technically there's still a bug here for the no
	argument case, probably caused by a screwup when +inf/-inf are
	converted to doubles.
	
        * kjs/math_object.cpp:
        (MathFuncImp::call):

2002-09-25  Darin Adler  <darin@apple.com>

	- fixed 3057964 -- JS problem performing MD5 script embedded in yahoo login page

        * kjs/simple_number.h: Fix incorrect check for sign bit that was munging numbers
	in the range 0x10000000 to 0x1FFFFFFF.

=== Alexander-24 ===

=== Alexander-22 ===

2002-09-05  Maciej Stachowiak  <mjs@apple.com>

	First baby step towards moving List away from garbage collection.
	
        * kjs/types.h: Add needsMarking boolean and make List inherit from
	Value privately instead of publicly.

2002-08-30  Darin Adler  <darin@apple.com>

        * JavaScriptCore.pbproj/project.pbxproj: Allowed the new Project Builder to put in